--- a/configuration.ini
+++ b/configuration.ini
@@ -20,7 +20,7 @@ args=("output/log/system_info.log", 52428800, 5)
 
 [handler_console]
 class=StreamHandler
-level=INFO
+level=ERROR
 formatter=console
 args=(sys.stdout,)
 
